--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -30,39 +30,39 @@ rel="stylesheet"
   <%-include('_navbar')%>
   <div class="container-fluid container-sm mt-4 w-50">
     <h1 class="m-4 ms-0">Sign Up</h1>
-    <form>
+    <form action="/create" method="post">
       <!-- 2 column grid layout with text inputs for the first and last names -->
       <div class="row mb-4">
         <div class="col">
           <div class="form-outline">
-            <input type="text" id="form3Example1" class="form-control" />
-            <label class="form-label" for="form3Example1">First name</label>
+            <input type="text" id="Firstname" name="firstname" class="form-control" />
+            <label class="form-label" for="Firstname">First name</label>
           </div>
         </div>
         <div class="col">
           <div class="form-outline">
-            <input type="text" id="form3Example2" class="form-control" />
-            <label class="form-label" for="form3Example2">Last name</label>
+            <input type="text" id="Lastname" name="lastname" class="form-control" />
+            <label class="form-label" for="Lastname">Last name</label>
           </div>
         </div>
       </div>
     
       <!-- Email input -->
       <div class="form-outline mb-4">
-        <input type="email" id="form3Example3" class="form-control" />
-        <label class="form-label" for="form3Example3">Email address</label>
+        <input type="email" id="email" name="email" class="form-control" />
+        <label class="form-label" for="email">Email address</label>
       </div>
     
       <!-- Password input -->
       <div class="form-outline mb-4">
-        <input type="password" id="form3Example4" class="form-control" />
-        <label class="form-label" for="form3Example4">Password</label>
+        <input type="password" id="password" name="password" class="form-control" />
+        <label class="form-label" for="password">Password</label>
       </div>
     
       <!-- Confirm Password input -->
       <div class="form-outline mb-4">
-        <input type="password" id="form3Example4" class="form-control" />
-        <label class="form-label" for="form3Example4">Confirm Password</label>
+        <input type="password" id="confirm_password" name="confirm_password" class="form-control" />
+        <label class="form-label" for="confirm_password">Confirm Password</label>
       </div>
 
       <!-- Submit button -->
