--- a/views/log-in.ejs
+++ b/views/log-in.ejs
@@ -30,16 +30,16 @@ rel="stylesheet"
     <%-include('_navbar')%>
     <div class="container-fluid container-sm mt-5 w-50">
         <h1 class="m-5 ms-0">Log-in</h1>
-        <form>
+        <form action="/create-session" method="post">
             <!-- Email input -->
             <div class="form-outline mb-4">
-              <input type="email" id="form2Example1" class="form-control" />
+              <input type="email" id="form2Example1" name="email" class="form-control" />
               <label class="form-label" for="form2Example1">Email address</label>
             </div>
           
             <!-- Password input -->
             <div class="form-outline mb-4">
-              <input type="password" id="form2Example2" class="form-control" />
+              <input type="password" id="form2Example2" name="password" placeholder="password" class="form-control" />
               <label class="form-label" for="form2Example2">Password</label>
             </div>
           
