--- a/views/_navbar.ejs
+++ b/views/_navbar.ejs
@@ -42,7 +42,7 @@
                 <a class="dropdown-item" href="#">Action</a>
               </li>
               <li>
-                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" href="/student/add-student">Add new Student</a>
               </li>
               <li><hr class="dropdown-divider" /></li>
               <li>
