--- a/views/_navbar.ejs
+++ b/views/_navbar.ejs
@@ -19,10 +19,10 @@
         <!-- Left links -->
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="#">Placement cell</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="/dashboard">Dashboard</a>
           </li>
           <!-- Navbar dropdown -->
           <li class="nav-item dropdown">
@@ -39,7 +39,7 @@
             <!-- Dropdown menu -->
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li>
-                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="/interview/add-interview">Add new Interview</a>
               </li>
               <li>
                 <a class="dropdown-item" href="/student/add-student">Add new Student</a>
@@ -57,9 +57,9 @@
             <a href="/sign-out"><button type="button" class="btn btn-link px-3 me-2">
               Log-out
             </button></a>
-            <button type="button" class="btn btn-primary me-3">
+            <a href="/download"><button type="button" class="btn btn-primary me-3">
               Download report
-            </button>
+            </button></a> 
         </div>
           <%}else{%>
             <!-- Left links -->
