minor links change

--- a/views/_navbar.ejs
+++ b/views/_navbar.ejs
@@ -67,9 +67,9 @@
           <button type="button" class="btn btn-link px-3 me-2">
             Login
           </button></a> 
-          <button type="button" class="btn btn-primary me-3">
+          <a type="button" href="/" class="btn btn-primary me-3">
             Sign up for free
-          </button>
+          </a>
       </div>
             <%}%>
         
