--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -34,7 +34,7 @@
       integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
       crossorigin="anonymous"
     ></script>
-    <title>Document</title>
+    <title><%=title%></title>
   </head>
   <body>
     <%-include('_navbar')%> 
@@ -51,7 +51,15 @@
             "
           >
             <h3 class="mt-2">Students list</h3>
+            <a
+                        href="/student/add-student"
+                        class="btn btn-primary mb-2"
+                        style="width: 80%"
+                      >
+                        Add Student
+                      </a>
             <div class="accordion accordion-flush" id="accordionFlushExample">
+
                 <% for (student of all_students) {%>
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="flush-headingOne">
@@ -172,10 +180,17 @@
             "
           >
             <h3 class="mt-2">Scheduled Interviews</h3>
-            <div class="accordion accordion-flush" style="width: 90%">
+            <a
+                        href="/interview/add-interview"
+                        class="btn btn-primary mb-2"
+                        style="width: 80%"
+                      >
+                        Add interview
+                      </a>
+            <div class="accordion accordion-flush" id="accordionFlushExample">
               <% for (interview of all_interviews) {%>
-              <div class="accordion-item my-2 border border-1 rounded">
-                <h2 class="accordion-header" id="headingOne">
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingOne">
                   <button
                     class="accordion-button collapsed"
                     type="button"
