--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -18,7 +18,7 @@
       type="text/javascript"
       src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.js"
     ></script>
-    <title>Profile</title>
+    <title><%=title%></title>
   </head>
 
   <body>
