--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -24,7 +24,7 @@ rel="stylesheet"
   type="text/javascript"
   src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.js"
 ></script>
-  <title>Document</title>
+  <title><%=title%></title>
 </head>
 <body>
   <%-include('_navbar')%>
