minor bootstrap issues solved

--- a/views/_navbar.ejs
+++ b/views/_navbar.ejs
@@ -46,7 +46,7 @@
               </li>
               <li><hr class="dropdown-divider" /></li>
               <li>
-                <a class="dropdown-item" href="#">Something else here</a>
+                <a class="dropdown-item" href="/profile"> Profile </a>
               </li>
             </ul>
           </li>
@@ -54,7 +54,7 @@
         </ul>
         <%if(locals.user){%>
           <div class="d-flex align-items-center">
-            <a href="/sign-out"><button type="button" class="btn btn-link px-3 me-2">
+            <a href="/sign-out"><button type="button" class="btn btn-danger px-3 me-2">
               Log-out
             </button></a>
             <a href="/download"><button type="button" class="btn btn-primary me-3">
