--- a/views/_navbar.ejs
+++ b/views/_navbar.ejs
@@ -34,7 +34,7 @@
               data-mdb-toggle="dropdown"
               aria-expanded="false"
             >
-              Dropdown
+              Add student/Interview
             </a>
             <!-- Dropdown menu -->
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
