--- a/views/_navbar.ejs
+++ b/views/_navbar.ejs
@@ -24,6 +24,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/dashboard">Dashboard</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/profile">Edit profile</a>
+          </li>
           <!-- Navbar dropdown -->
           <li class="nav-item dropdown">
             <a
@@ -45,9 +48,6 @@
                 <a class="dropdown-item" href="/student/add-student">Add new Student</a>
               </li>
               <li><hr class="dropdown-divider" /></li>
-              <li>
-                <a class="dropdown-item" href="/profile"> Profile </a>
-              </li>
             </ul>
           </li>
           
